--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@acryl/acryl-repl",
   "version": "2.5.1",
-  "description": "Javascript console to interact with waves blockchain. React component",
+  "description": "Javascript console to interact with acryl blockchain. React component",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "repository": "https://github.com/acrylplatform/acryl-repl",
@@ -12,7 +12,10 @@
     "dist": "rimraf dist && tsc && npm run copyCssSvg",
     "prepublishOnly": "npm run dist"
   },
-  "author": "wavesplatform",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": "acrylplatform",
   "license": "MIT",
   "peerDependencies": {
     "react": "^16.3.2",
@@ -20,7 +23,7 @@
     "@waves/ride-js": "^0.17.7"
   },
   "dependencies": {
-    "@waves/waves-transactions": "^3.16.2",
+    "@acryl/acryl-transactions": "^3.16.6",
     "axios": "^0.19.0",
     "babylon": "^6.18.0",
     "babylon-walk": "^1.0.2",
