Replace ride-js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acryl/acryl-repl",
-  "version": "2.5.1",
+  "version": "2.5.2",
   "description": "Javascript console to interact with acryl blockchain. React component",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -20,7 +20,7 @@
   "peerDependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "@waves/ride-js": "^0.17.7"
+    "@acryl/ride-js": "^1.0.1"
   },
   "dependencies": {
     "@acryl/acryl-transactions": "^3.16.6",
@@ -43,7 +43,7 @@
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.0.8",
     "@types/react-redux": "^6.0.9",
-    "@waves/ride-js": "^0.17.7",
+    "@acryl/ride-js": "^1.0.1",
     "autoprefixer": "^9.1.5",
     "copy-webpack-plugin": "^4.5.2",
     "copyfiles": "^2.1.0",
